fix: 【member】合并 MemberTagMapper/DO 消除 bean 冲突，修复 Java 8 兼容
- 将 social.MemberTagDO 字段合并至 tag.MemberTagDO
- 将 social.MemberTagMapper 方法合并至 tag.MemberTagMapper
- 删除 social 包下的 MemberTagMapper 和 MemberTagDO
- NicknameServiceImpl 替换 Map.of/List.of 为 HashMap/Arrays.asList 兼容 Java 8
- 更新 SocialService/SocialServiceImpl/AppSocialController/SocialConvert 引用

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>